--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "add": "^2.0.6",
+    "babel-plugin-styled-components": "^1.12.0",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
+    "firebase": "^8.6.5",
+    "javascript-time-ago": "^2.3.6",
+    "moment": "^2.29.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-images-uploading": "^3.1.2",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0",
+    "timeago-react": "^3.0.2",
+    "url-loader": "^4.1.1",
+    "yarn": "^1.22.10"
   }
 }
